# potosi

./: .env.dist  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.rst  appspec.yml  buildspec.yml  deploy.sh  main.yml  noxfile.py  pyproject.toml  settings.toml  stack.yml
cfn-templates/: main.yml  rds.yml
docs/: exchange_info.json  orders.json  signal-activated.txt  signal-close.txt  signal-create.txt  stoploss-hiting.txt  stoploss-updated.txt  target-archieved.txt  traling-stoploss-hiting.txt  user_data_stream.txt
ec2/scripts/: after_install.sh  install_dependencies.sh  run_services.sh  start-service.sh  stop-service.sh
ec2/systemd/: signal-receiver.service  user-stream.service
potosi/: config.py  dataclasses.py  db.py  log.py  migration.py  models.py  parser_signal.py  services.py  trading.py
potosi/app/signal_receiver/: __main__.py
potosi/app/user_stream_data/: __main__.py
tests/: conftest.py  test_parser_signal.py  test_potosi.py  test_trade_service.py
